--- a/fonts.css
+++ b/fonts.css
@@ -1,13 +1,13 @@
 .font1{
-  font-family: 'Droid+Sans', sans-serif;
+  font-family: 'Droid Sans', sans-serif;
 }
 
 .font2{
-  font-family: 'Roboto+condensed', sans-serif;
+  font-family: 'Roboto condensed', sans-serif;
 }
 
 .font3{
-  font-family: 'PT+Sans', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 
 .heading1{
