--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-/*
-Placeholder
-*/
+.font1{
+  font-family: 'Droid Sans', sans-serif;
+}
+
+.font2{
+  font-family: 'Roboto condensed', sans-serif;
+}
+
+.font3{
+  font-family: 'PT Sans', sans-serif;
+}
+
+.heading1{
+  font-family: 'Nunito', sans-serif;
+}
+
+.heading2{
+  font-family: 'Cairo', sans-serif;
+}
+
+.heading3{
+  font-family: 'Lobster', serif;
+}
