--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,17 @@ Main stylesheet for portfolio website
 */
 
 /* Fonts */
-.font1{
+p, .font1{
   font-family: 'Droid Sans', sans-serif;
+  font-size: 11pt;
+  color: #DFDFDF;
 }
 
-.font2{
+.caption, .font2{
   font-family: 'Roboto condensed', sans-serif;
 }
 
-p, .font3{
+.font3{
   font-family: 'PT Sans', sans-serif;
 }
 
@@ -32,21 +34,26 @@ h1{
 }
 /* End fonts */
 /* Color Scheme */
-.p0 { color: rgba( 26, 96,149,1); }	/* Main Primary color: BLUE */
+h2, .p0 { color: rgba( 26, 96,149,1); }	/* Main Primary color: BLUE */
 .p1 { color: rgba( 12, 52, 83,1); }
-.p2 { color: rgba( 23, 75,114,1); }
+a:visited, .p2 { color: rgba( 23, 75,114,1); }
 .p3 { color: rgba( 39,109,162,1); }
-.p4 { color: rgba( 56,128,184,1); }
+a, .p4 { color: rgba( 56,128,184,1); }
 
-.s10 { color: rgba(231,166, 28,1); }	/* Main Secondary color (1): YELLOW */
+h3, .s10 { color: rgba(231,166, 28,1); }	/* Main Secondary color (1): YELLOW */
 .s11 { color: rgba(130, 91, 11,1); }
 .s12 { color: rgba(177,129, 27,1); }
 .s13 { color: rgba(252,186, 47,1); }
 .s14 { color: rgba(255,194, 65,1); }
 
-.s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
+h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
 .s21 { color: rgba(130, 63, 11,1); }
 .s22 { color: rgba(177, 92, 27,1); }
 .s23 { color: rgba(252,136, 47,1); }
 .s24 { color: rgba(255,147, 65,1); }
 /* End color scheme */
+/*  */
+
+body{
+  background-color: #2F2F2F;
+}
