--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ p, .font1{
 h3, .heading3{
   font-family: 'Nunito', sans-serif;
   font-size: 3em;
+  margin-top: .5em;
+  margin-bottom: .5em;
 }
 
 h2, .heading2{
@@ -76,13 +78,22 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
 .cTitle{
   text-align: center;
 }
+.topSection{
+  background-color: rgba( 12, 52, 83,1); /* p1 */
+}
+.topBlock{
+  border: 3px solid;
+  padding: 5px;
+  border-color: rgba(231,116, 28,1); /* s20 */
+
+}
 
 /*  */
 /* ID's */
 
 #info{
   display: flex;
-  width: inherit;
+  flex-wrap: wrap;
 }
 #right{
   text-align: right;
