--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,15 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
 }
 .topSection{
   background-color: rgba( 12, 52, 83,1); /* p1 */
-}
-.topBlock{
   border: 3px solid;
   padding: 5px;
   border-color: rgba(231,116, 28,1); /* s20 */
+}
+.topBlock{
 
+}
+.noMargin{
+  margin: 0px;
 }
 
 /*  */
