--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html{
 
 body{
   background-color: #2F2F35;
+
+  margin: 0;
 }
 
 /* Fonts */
@@ -42,13 +44,14 @@ h3, .heading3{
 
 h2, .heading2{
   font-family: 'Cairo', sans-serif;
-  font-size: 2.25em;
+  font-size: 2.33em;
 }
 
 h1, .heading1{
   font-family: 'Lobster', serif;
   text-align: center;
   font-size: 2.75em;
+  margin-top: 0;
 }
 /* End fonts */
 /*Links*/
@@ -97,8 +100,6 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   width: 100%;
 }
 
-
-
 /* End Classes */
 /* ID's */
 #me{
@@ -130,6 +131,7 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  background-color: #2F2F35;
 }
 
 @media screen and (min-width: 700px) {
@@ -138,6 +140,7 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
     text-align: center;
   }
 }
+/* Mid-Size */
 @media screen and (min-width: 550px) and (max-width: 949px) {
   .container{
     width: 90%;
@@ -146,7 +149,13 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
     width: 50%;
     text-align: center;
   }
+  p{font-size: 1.33em;}
+  h3{font-size: 2em;}
+  h2{font-size: 2.66em;}
+  h1{font-size: 3em;}
+  body{background-color: white;}
 }
+/* Full Size */
 @media screen and (min-width: 950px) {
   .container{
     width: 80%;
@@ -155,4 +164,8 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
     width: 33%;
     text-align: center;
   }
+  p{font-size: 1.33em;}
+  h3{font-size: 2em;}
+  h2{font-size: 3em;}
+  h1{font-size: 4em;}
 }
