--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   margin-right: auto;
   background-color: #2F2F35;
 }
-
+/* Scaling picture and info section */
 @media screen and (min-width: 700px) {
   .infocolumn{
     width: 50%;
