--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,17 @@ Main stylesheet for portfolio website (Web first design)
 
 html{
   font-size: 100%;
+  height: 100%;;
 }
 
 body{
   background-color: #2F2F35;
-
+  min-height: 100%;
   margin: 0;
+}
+article, section{
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* Fonts */
@@ -55,9 +60,9 @@ h1, .heading1{
 }
 /* End fonts */
 /*Links*/
-a:hover{ color: rgba(252,136, 47,1); } /*.s23*/
-p > a:visited{ color: rgba(177, 92, 27,1); }/*.s22*/
-p > a{ color: rgba(255,147, 65,1); }/*.s24*/
+p > a{ color: rgba(252,136, 47,1); } /*.s23*/
+a:hover{ color: rgba(255,147, 65,1); }/*.s24*/
+a:visited{ color: rgba(177, 92, 27,1); }/*.s22*/
 h3 > a{color: rgba(231,166, 28,1); text-decoration: none;}/*.s10*/
 /*End Links*/
 /* Color Scheme */
@@ -85,33 +90,56 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   text-align: center;
 }
 .section{
+  border: 3px solid;
+  padding: 5px;
+  margin: 5px;
+  border-color: rgba(231,116, 28,1); /* s20 */
+}
+.project{
   background-color: rgba( 12, 52, 83,1); /* p1 */
   border: 3px solid;
   padding: 5px;
   border-color: rgba(231,116, 28,1); /* s20 */
+  margin: 5px;
+  width: 100%;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
+.clickable:hover{
+  background-color: rgba( 26, 96,149,1);
+}
+
 .noMargin{
   margin: 0px;
 }
-
-.feature img{
-  max-width: 100%;
-  max-height: 100%;
-  width: 100%;
+.noBotMargin{
+  margin-bottom: 0px;
+}
+.noUnderline{
+  text-decoration: none;
+}
+.blueBack{
+  background-color: rgba( 12, 52, 83,1); /* p1 */
 }
 
 /* End Classes */
 /* ID's */
 #me{
-  max-width: 300px;
-  max-height: 300px;
+  max-width: 200px;
+  max-height: 200px;
   width: 100%;
+  height: 100%;
   flex-grow: 1;
   flex-shrink: 1;
 }
 
 /* Begin Scaling */
-
+.container{
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #2F2F35;
+}
 .row{
   display: flex;
   flex-wrap: wrap;
@@ -122,50 +150,51 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   flex-shrink: 0;
   text-align: center;
 }
-.projcolumn{
+.namecolumn{
   width: 100%;
   flex-grow: 1;
   flex-shrink: 0;
+  text-align: center;
 }
-.container{
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #2F2F35;
-}
+
 /* Scaling picture and info section */
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 504px) /*and (max-width: 921px)*/{
   .infocolumn{
     width: 50%;
-    text-align: center;
   }
 }
-/* Mid-Size */
-@media screen and (min-width: 550px) and (max-width: 949px) {
+/* Scaling Projects Section */
+@media screen and (min-width: 767px) and (max-width: 921px) {
   .container{
     width: 90%;
   }
-  .projcolumn{
-    width: 50%;
+  .project{
+    width: 47%;
     text-align: center;
   }
   p{font-size: 1.33em;}
   h3{font-size: 2em;}
   h2{font-size: 2.66em;}
   h1{font-size: 3em;}
-  body{background-color: white;}
+  body{background-color: rgba( 23, 75,114,1);}
 }
 /* Full Size */
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 921px) {
   .container{
     width: 80%;
   }
-  .projcolumn{
-    width: 33%;
+  .project{
+    width: 30%;
     text-align: center;
   }
   p{font-size: 1.33em;}
   h3{font-size: 2em;}
-  h2{font-size: 3em;}
+  h2{font-size: 2.66em;}
   h1{font-size: 4em;}
+  body{background-color: rgba( 23, 75,114,1);}
+
+  /* For center photo */
+  /*.namecolumn{
+    width: 50%;
+  }*/
 }
