--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,8 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   }
   .project{
     width: 47%;
+  }
+  .project h3{
     text-align: center;
   }
   p{font-size: 1.33em;}
@@ -185,6 +187,8 @@ h1, .s20 { color: rgba(231,116, 28,1); }	/* Main Secondary color (2): ORANGE */
   }
   .project{
     width: 30%;
+  }
+  .project h3{
     text-align: center;
   }
   p{font-size: 1.33em;}
