--- a/projects/1b/ex1.css
+++ b/projects/1b/ex1.css
@@ -14,8 +14,11 @@ a:hover {
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+  background-color: rgba(231,166, 28,1);
+  border: .05rem solid rgba(130, 91, 11,1);
+}
+.btn-secondary:hover{
+  background-color: rgba(231,116, 28,1);
 }
 
 
@@ -26,7 +29,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: rgba( 12, 52, 83,1);
 }
 
 body {
@@ -36,7 +39,7 @@ body {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
-  color: #fff;
+  color: rgba(231,116, 28,1);
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -53,13 +56,14 @@ body {
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
+  color: rgba(231,116, 28,1);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(130, 63, 11,1);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -67,8 +71,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: rgba(255,147, 65,1);
+  border-bottom-color: rgba(255,147, 65,1);
 }
 
 @media (min-width: 48em) {
